--- a/fundamentals/matrix_project/test_matrix_operations.ipynb
+++ b/fundamentals/matrix_project/test_matrix_operations.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
       "text/plain": "<module 'ipytest' from 'C:\\\\Users\\\\josealexander.pena\\\\AppData\\\\Local\\\\Continuum\\\\miniconda3\\\\envs\\\\ds2\\\\lib\\\\site-packages\\\\ipytest\\\\__init__.py'>"
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 12
     }
    ],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -66,43 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "Exception",
-     "evalue": "No se pueden sumar porque no tiene la misma dimension",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\DS\\GitHub\\da-academy\\fundamentals\\matrix_project\\test_matrix_operations.ipynb\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m     [1, 0, 1]]    \n\u001b[0;32m     13\u001b[0m \u001b[0mma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMatrixOperations\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0maT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatrix_adition\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[0maT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\DS\\GitHub\\da-academy\\fundamentals\\matrix_project\\matrix.ipynb\u001b[0m in \u001b[0;36mmatrix_adition\u001b[1;34m(self, m)\u001b[0m\n",
-      "\u001b[1;31mException\u001b[0m: No se pueden sumar porque no tiene la misma dimension"
-     ]
-    }
-   ],
-   "source": [
-    "a = [[1,2,3,4,5,6,7,8,9,0],\n",
-    "\t[10,10,10,10,10,10,7,8,9,0],\n",
-    "\t[11,11,11,11,11,11,7,8,9,0],\n",
-    "\t[12,12,12,12,12,12,7,8,9,0],\n",
-    "\t[13,13,13,13,13,13,7,8,9,0],\n",
-    "\t[14,14,14,14,14,14,7,8,9,0],\n",
-    "\t[15,15,15,15,15,15,7,8,9,0],\n",
-    "\t[16,16,16,16,16,16,7,8,9,0],\n",
-    "\t[-1,-2,-3,-4,-5,-6,7,8,9,0]]\n",
-    "b= [[1, 2, 3], \n",
-    "    [3, 2, 1], \n",
-    "    [1, 0, 1]]    \n",
-    "ma = file.MatrixOperations(a)\n",
-    "aT = ma.matrix_adition(b)\n",
-    "aT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,20 +77,122 @@
     "    def test_matrix_adition_fail(self):\n",
     "        ma = file.MatrixOperations(self.create_matrix_10x10())\n",
     "        x = self.create_matrix_3x3()\n",
-    "        self.assertRaises(Exception, ma.matrix_adition, x)\n",
+    "        with self.assertRaises(UserWarning) as cm:\n",
+    "            ma.matrix_adition(x)\n",
+    "        the_exception = cm.exception.args[0]\n",
+    "        self.assertEqual(the_exception, 'No se pueden sumar porque no tiene la misma dimension')        \n",
     "                                          \n",
+    "    def test_matrix_adition(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_3x3())\n",
+    "        x = self.create_matrix_3x3()\n",
+    "        assert ma.matrix_adition(x) == [[2, 4, 6], \n",
+    "                                        [6, 4, 2], \n",
+    "                                        [2, 0, 2]]\n",
+    "    def test_matrix_multiplication_fail(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_10x10())\n",
+    "        x = self.create_matrix_3x3()\n",
+    "        with self.assertRaises(UserWarning) as cm:\n",
+    "            ma.matrix_multiplication(x)\n",
+    "        the_exception = cm.exception.args[0]\n",
+    "        self.assertEqual(the_exception, 'No se pueden sumar porque no tiene la misma dimension de columnas')\n",
     "\n",
+    "    def test_matrix_multiplication(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_3x3())\n",
+    "        x = self.create_matrix_3x3()\n",
+    "        assert ma.matrix_multiplication(x) == [[10, 6, 8], \n",
+    "                                            [10, 10, 12], \n",
+    "                                            [2, 2, 4]] \n",
+    "\n",
+    "    def test_matrix_transpose(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_3x3())\n",
+    "        x = self.create_matrix_3x3()\n",
+    "        assert ma.matrix_transpose(x) == [(1, 3, 1), \n",
+    "                                            (2, 2, 0), \n",
+    "                                            (3, 1, 1)]       \n",
+    "\n",
+    "    def test_matrix_determinant(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_3x3())\n",
+    "        x = self.create_matrix_3x3()\n",
+    "        assert ma.matrix_determinant(x) == -8   \n",
+    "\n",
+    "    def test_getMatrixMinor(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_3x3())\n",
+    "        x = self.create_matrix_3x3()\n",
+    "        assert ma.getMatrixMinor(x, 1, 1) == [[1, 3], \n",
+    "                                             [1, 1]]    \n",
+    "\n",
+    "    def test_matrix_adjugate(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_3x3())\n",
+    "        x = self.create_matrix_3x3()\n",
+    "        assert ma.matrix_adjugate(x) == [[2, -2, -2], \n",
+    "                                        [-2, -2, 2], \n",
+    "                                        [-4, 8, -4]]   \n",
+    "\n",
+    "    def test_matrix_inverted(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_3x3())\n",
+    "        x = self.create_matrix_3x3()\n",
+    "        assert ma.matrix_inverted(x) == [[-0.25, 0.25, 0.5], \n",
+    "                                        [0.25, 0.25, -1.0], \n",
+    "                                        [0.25, -0.25, 0.5]] \n",
+    "\n",
+    "    def test_matrix_by_column(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_20x10())\n",
+    "        assert ma.matrix_by_row_or_column([1,3,8], isRow=False) == [(1, 10, 11, 12, 13, 14, 15, 16, 1, 0, -1, -2, -3, -4, -5, -6, -7, -8, -9, 0), (3, 10, 11, 12, 13, 14, 15, 16, 3, -3, -3, -3, -3, -3, -3, -3, -3, -3, -3, -3), (8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8)]   \n",
+    "\n",
+    "    def test_matrix_by_row(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_20x10())\n",
+    "        assert ma.matrix_by_row_or_column([2,4,10], isRow=True) == [[10, 10, 10, 10, 10, 10, 7, 8, 9, 0], \n",
+    "                                                                    [12, 12, 12, 12, 12, 12, 7, 8, 9, 0], \n",
+    "                                                                    [0, -2, -3, 0, 1, 1, 1, 8, 9, 1]]     \n",
+    "\n",
+    "\n",
+    "    def test_getMatrixMinor_byColumn(self):\n",
+    "        ma = file.MatrixOperations(self.create_matrix_3x3())\n",
+    "        x = self.create_matrix_10x10()\n",
+    "        assert ma.getMatrixMinor_byColumn(x, 5) == [[5,6],\n",
+    "                                                    [10,10],\n",
+    "                                                    [11,11],\n",
+    "                                                    [12,12],\n",
+    "                                                    [13,13],\n",
+    "                                                    [14,14],\n",
+    "                                                    [15,15],\n",
+    "                                                    [16,16],\n",
+    "                                                    [-5,-6],\n",
+    "                                                    [1,1]]    \n",
+    "    \n",
+    "    def create_matrix_20x10(self):\n",
+    "        return [[1,2,3,4,5,6,7,8,9,0],\n",
+    "                [10,10,10,10,10,10,7,8,9,0],\n",
+    "                [11,11,11,11,11,11,7,8,9,0],\n",
+    "                [12,12,12,12,12,12,7,8,9,0],\n",
+    "                [13,13,13,13,13,13,7,8,9,0],\n",
+    "                [14,14,14,14,14,14,7,8,9,0],\n",
+    "                [15,15,15,15,15,15,7,8,9,0],\n",
+    "                [16,16,16,16,16,16,7,8,9,0],\n",
+    "                [1, 2, 3, 4, 5, 6, 7,8,9,0],\n",
+    "                [0, -2,-3, 0, 1, 1,1,8,9,1],\n",
+    "                [-1,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [-2,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [-3,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [-4,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [-5,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [-6,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [-7,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [-8,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [-9,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [-0,-2,-3,-4,-5,-6,7,8,9,0]]         \n",
+    "                                       \n",
     "    def create_matrix_10x10(self):\n",
     "        return [[1,2,3,4,5,6,7,8,9,0],\n",
-    "        [10,10,10,10,10,10,7,8,9,0],\n",
-    "        [11,11,11,11,11,11,7,8,9,0],\n",
-    "        [12,12,12,12,12,12,7,8,9,0],\n",
-    "        [13,13,13,13,13,13,7,8,9,0],\n",
-    "        [14,14,14,14,14,14,7,8,9,0],\n",
-    "        [15,15,15,15,15,15,7,8,9,0],\n",
-    "        [16,16,16,16,16,16,7,8,9,0],\n",
-    "        [-1,-2,-3,-4,-5,-6,7,8,9,0],\n",
-    "        [0,-2,-3,0,1,1,1,8,9,1]]\n",
+    "                [10,10,10,10,10,10,7,8,9,0],\n",
+    "                [11,11,11,11,11,11,7,8,9,0],\n",
+    "                [12,12,12,12,12,12,7,8,9,0],\n",
+    "                [13,13,13,13,13,13,7,8,9,0],\n",
+    "                [14,14,14,14,14,14,7,8,9,0],\n",
+    "                [15,15,15,15,15,15,7,8,9,0],\n",
+    "                [16,16,16,16,16,16,7,8,9,0],\n",
+    "                [-1,-2,-3,-4,-5,-6,7,8,9,0],\n",
+    "                [0,-2,-3,0,1,1,1,8,9,1]]\n",
     "\n",
     "    def create_matrix_3x3(self):\n",
     "        return [[1, 2, 3], \n",
@@ -136,13 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": ".                                                                        [100%]\n"
+     "text": "............                                                             [100%]\n"
     }
    ],
    "source": [
