--- a/fundamentals/matrix_project/matrix.ipynb
+++ b/fundamentals/matrix_project/matrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "\n",
     "    def matrix_multiplication(self, m):\n",
     "        if len(m[0]) != len(self.matrix[0]):\n",
-    "            raise UserWarning('No se pueden sumar porque no tiene la misma dimension de columnas')        \n",
+    "            raise UserWarning('No se pueden multiplicar porque no tienen la misma dimension de A.columnas x B.filas ')        \n",
     "        else:\n",
     "            return [[sum(a*b for a,b in zip(X_row,Y_col)) for Y_col in zip(*m)] for X_row in self.matrix]\n",
     "\n",
